# mostrui

./: .gitignore  Cargo.toml  LICENSE  README.md  settings.tpl.toml
src/: app.rs  db.rs  lib.rs  main.rs  my_order.rs  nip59.rs  settings.rs  take_buy.rs  take_sell.rs  util.rs
src/widgets/: mod.rs  new_order_widget.rs  settings_widget.rs
